Feat: added struct error response
